added tests, daily data functionality and lifestyle data
